FIX VS SECTION ALIGNMENT

--- a/src/Components/VsSection/vsSection.css
+++ b/src/Components/VsSection/vsSection.css
@@ -52,11 +52,13 @@
     .vsSection__Title-Container{
         flex-direction: column;
         padding: 20px;
-        gap: 10px;
+        gap: 10px;        
+        align-items: center;
     }
     .vsSection__Title{
         font-size: 38px;
         line-height: 40px;
+        text-align: center;
     }
     .vsSection__VS-Container{
         flex-direction: column;
